--- a/Sorting Tool/Sorting it out/task-info.yaml
+++ b/Sorting Tool/Sorting it out/task-info.yaml
@@ -523,5 +523,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/106/stages/576/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 15 Aug 2021 02:26:23 UTC
 record: -1
