--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -13,7 +13,7 @@ stages:
   is_completed: true
 - id: 576
   step: 9625
-  is_completed: false
+  is_completed: true
 - id: 577
   step: 9626
   is_completed: false
