Stage 2/6: Not just numbers

--- a/Sorting Tool/Not just numbers/task-info.yaml
+++ b/Sorting Tool/Not just numbers/task-info.yaml
@@ -389,5 +389,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/106/stages/575/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 15 Aug 2021 02:20:45 UTC
 record: -1
