--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/353193/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 01 Jan 1970 00:00:00 UTC
+update_date: Sun, 15 Aug 2021 02:09:56 UTC
 stages:
 - id: 574
   step: 9623
   is_completed: true
 - id: 575
   step: 9624
-  is_completed: false
+  is_completed: true
 - id: 576
   step: 9625
   is_completed: false
