--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -19,10 +19,10 @@ stages:
   is_completed: true
 - id: 578
   step: 9627
-  is_completed: false
+  is_completed: true
 - id: 579
   step: 9628
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Units of information
