--- a/Sorting Tool/Error_/task-info.yaml
+++ b/Sorting Tool/Error_/task-info.yaml
@@ -416,5 +416,8 @@ files:
 
   learner_created: false
 feedback_link: https://hyperskill.org/projects/106/stages/578/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Sun, 15 Aug 2021 04:32:57 UTC
+record: 5
