--- a/Sorting Tool/X-files/task-info.yaml
+++ b/Sorting Tool/X-files/task-info.yaml
@@ -493,6 +493,13 @@ files:
 
 
   learner_created: false
+- name: out.txt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/106/stages/579/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">JetBrains
+    Academy</a> to continue learning.
+  time: Sun, 15 Aug 2021 04:52:50 UTC
 record: -1
